<resources xmlns:tools="http://schemas.android.com/tools">
    <!--
    BIG COMMENT GENERATOR:

    http://patorjk.com/software/taag/#p=display&f=ANSI%20Shadow&t=Type%20Something%20

    TEMPLATES:

    <string name=""></string>

    -->

    <!--
                                        ███╗   ███╗ █████╗ ██╗███╗   ██╗
                                        ████╗ ████║██╔══██╗██║████╗  ██║
                                        ██╔████╔██║███████║██║██╔██╗ ██║
                                        ██║╚██╔╝██║██╔══██║██║██║╚██╗██║
                                        ██║ ╚═╝ ██║██║  ██║██║██║ ╚████║
                                        ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝
    -->
    <string name="app_name">Addiction Breaker</string>
    <string name="start_button">Start</string>
    <string name="background">background-img</string>

    <!--
                                        ███████╗ ██████╗ ██████╗ ███╗   ███╗
                                        ██╔════╝██╔═══██╗██╔══██╗████╗ ████║
                                        █████╗  ██║   ██║██████╔╝██╔████╔██║
                                        ██╔══╝  ██║   ██║██╔══██╗██║╚██╔╝██║
                                        ██║     ╚██████╔╝██║  ██║██║ ╚═╝ ██║
                                        ╚═╝      ╚═════╝ ╚═╝  ╚═╝╚═╝     ╚═╝
     -->
    <string name="greeting">Let\'s get started!</string>
    <string name="hint_name">Enter your name!</string>
    <string name="hint_age">How old are you?</string>
    <string name="form_name">Name:</string>
    <string name="form_confirm_button">CONFIRM</string>
    <string name="form_age">Age:</string>

    <string name="form_addiction_type">What is the addiction you would like to get rid of?</string>
    <array name="addictions">
        <item>Cigarettes</item>
        <item>Alcohol</item>
        <item>Vaping/Juuling</item>
    </array>
    <!--
     ██████╗ ██████╗ ███╗   ██╗███████╗██╗   ██╗███╗   ███╗████████╗██╗ ██████╗ ███╗   ██╗    ██╗███╗   ██╗███████╗ ██████╗
    ██╔════╝██╔═══██╗████╗  ██║██╔════╝██║   ██║████╗ ████║╚══██╔══╝██║██╔═══██╗████╗  ██║    ██║████╗  ██║██╔════╝██╔═══██╗
    ██║     ██║   ██║██╔██╗ ██║███████╗██║   ██║██╔████╔██║   ██║   ██║██║   ██║██╔██╗ ██║    ██║██╔██╗ ██║█████╗  ██║   ██║
    ██║     ██║   ██║██║╚██╗██║╚════██║██║   ██║██║╚██╔╝██║   ██║   ██║██║   ██║██║╚██╗██║    ██║██║╚██╗██║██╔══╝  ██║   ██║
    ╚██████╗╚██████╔╝██║ ╚████║███████║╚██████╔╝██║ ╚═╝ ██║   ██║   ██║╚██████╔╝██║ ╚████║    ██║██║ ╚████║██║     ╚██████╔╝
     ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝╚══════╝ ╚═════╝ ╚═╝     ╚═╝   ╚═╝   ╚═╝ ╚═════╝ ╚═╝  ╚═══╝    ╚═╝╚═╝  ╚═══╝╚═╝      ╚═════╝

    -->


    <string name="consumption_info_greeting">A few more questions</string>
    <!-- %1$s is not a typo, it's a placeholder
    readmore: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android
    -->
    <string name="consumption_info_how_frequent">How many %1$s, on average, do you consume a day?</string>
    <string name="consumption_info_amount">Enter Amount</string>
    <string name="consumption_info_cost">How much do you usually spend on %1$s?</string>
    <string name="consumption_info_letsGo_btn">LET\'S GO!</string>
    <string name="title_activity_adiction_list">AdictionList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">Date</string>
    <string name="start_date">Please Enter Your Start Date and Time</string>
    <string name="start_time">Time</string>
    <string name="settings">Settings</string>
    <string name="links">Links</string>
    <string name="home">Home</string>
    <string name="journey">Journey</string>
    <string name="addiction_tag">NO MORE ADDICTION</string>
    <string name="days_tag">DAYS SO FAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">PROFILE</string>
    <string name="overcoming_alcohol_addiction">overcoming_alcohol_addiction</string>
    <string name="Overcoming_alcohol_addiction" />
    <string name="links_for_alcohol_addictions">Links For Alcohol Addiction</string>
    <string name="hotline_numbers_for_addictions_etc" />
    <string name="suicide_preventions">Suicide Prevention</string>
    <string name="_1_800_273_8255" />
    <string name="alcohol_and_drug_abuses">Alcohol and Drug Abuse</string>
    <string name="new_start_date">Select your new Start Date and Time</string>
    <string name="reset_title">Let\'s Get Back on Track</string>
    <string name="reset">Reset Progress</string>
    <string name="overcoming_alcohol_addiction_article">Overcoming Alcohol Addiction (Article)</string>
    <string name="what_happens_when_you_stop_article">What Happens When You Stop (Article)</string>
    <string name="motivations_for_quitting">Motivations for Quitting</string>
    <string name="effects_on_the_body">Effects On The Body</string>
    <string name="alcohol_effects_1">Alcohol Effects 1</string>
    <string name="alcohol_effects_2">Alcohol Effects 2</string>
    <string name="links_for_cigarette_vaping_addictions">Links for Cigarette/Vaping Addictions</string>
    <string name="impact_of_alcohol_on_developing_brains_video">Impact of Alcohol on Developing Brains (Video)</string>
    <string name="reason_to_quit_smoking_article">Reason To Quit Smoking (Article)</string>
    <string name="hotline_numbers_for_addictions">Hotline Numbers For Addictions</string>
    <string name="alcohol_addiction_hotline">Alcohol Addiction Hotline</string>
    <string name="_1_844_289_0879" tools:ignore="TypographyDashes">1–844-289-0879</string>
    <string name="quit_smoking_help_hotline">Quit Smoking Help Hotline</string>
    <string name="_1_800_784_8669" tools:ignore="TypographyDashes">1-800-784-8669</string>
    <string name="alcohol_effects_on_the_body_article">Alcohol Effects on the body (Article)</string>
    <string name="alcohol_impact_article">Alcohol Impact (Article)</string>
    <string name="smoking_effects_on_the_body_article">Smoking Effects On The Body (Article)</string>
    <string name="vaping_effects_on_the_body_article">Vaping Effects On The Body (Article)</string>
    <string name="links_for_smoking_vs_vaping">Links For Smoking vs. Vaping</string>
    <string name="impact_of_smoking_video">Impact Of Smoking (Video)</string>
    <string name="which_is_safer_smoking_or_vaping_article">Which Is Safer Smoking or Vaping (Article)</string>
    <string name="notification_prompt">Setup Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="pick_time_for_notifications">Pick the time you want to receive notifications</string>
    <string name="journey_lifeLost">%1$s d %2$s h %3$s m</string>
    <string name="journey_money">$ %1$s </string>
    <string name="journey_numberOfConsumption">%1$s</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_progress">Your Progress</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="back">Go Back</string>
    <string name="cancel_Reminders">Cancel Reminders</string>
    <string name="change_language">Change Language</string>
    <string name="change">CHANGE</string>
    <string name="name">Name</string>
    <string name="names">Names</string>
    <string name="change_name">Change Name</string>


</resources>
