<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Vape_Effects"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.LinksFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/links"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.14" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="217dp"
                android:layout_height="31dp"
                android:layout_marginTop="36dp"
                android:text="@string/links_for_alcohol_addictions"
                android:textColor="#FF0000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"/>


            <TextView
                android:id="@+id/textView17"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:text="@string/motivations_for_quitting"
                android:textColor="#E91E63"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/Overcoming_Motivation"
                android:layout_width="253dp"
                android:layout_height="21dp"
                android:layout_marginTop="20dp"
                android:text="@string/overcoming_alcohol_addiction_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/Stopping_motivations"
                android:layout_width="251dp"
                android:layout_height="23dp"
                android:layout_marginTop="4dp"
                android:text="@string/what_happens_when_you_stop_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Overcoming_Motivation" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/effects_on_the_body"
                android:textColor="#FF0057"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Stopping_motivations" />

            <TextView
                android:id="@+id/Alcohol_Effects"
                android:layout_width="254dp"
                android:layout_height="20dp"
                android:text="@string/alcohol_effects_on_the_body_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/Alcohol_Impact"
                android:layout_width="252dp"
                android:layout_height="22dp"
                android:text="@string/alcohol_impact_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Alcohol_Effects" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/links_for_cigarette_vaping_addictions"
                android:textColor="#FF0057"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Alcohol_Impact_Brain" />

            <TextView
                android:id="@+id/Alcohol_Impact_Brain"
                android:layout_width="258dp"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:text="@string/impact_of_alcohol_on_developing_brains_video"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Alcohol_Impact" />

            <TextView
                android:id="@+id/Quit_Smoking"
                android:layout_width="236dp"
                android:layout_height="21dp"
                android:text="@string/reason_to_quit_smoking_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/Smoking_Effects"
                android:layout_width="265dp"
                android:layout_height="17dp"
                android:text="@string/smoking_effects_on_the_body_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Vape_Effect" />

            <TextView
                android:id="@+id/Vape_Effect"
                android:layout_width="249dp"
                android:layout_height="20dp"
                android:text="@string/vaping_effects_on_the_body_article"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Quit_Smoking" />

            <TextView
                android:id="@+id/Impact_Of_Smoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/impact_of_smoking_video"
                android:textColor="#FAFAFA"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Smoking_Effects" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="199dp"
                android:layout_height="19dp"
                android:layout_marginTop="24dp"
                android:text="@string/links_for_smoking_vs_vaping"
                android:textColor="#FF0057"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Smoking_Effects" />

            <TextView
                android:id="@+id/Smoke_Safety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/which_is_safer_smoking_or_vaping_article"
                android:textColor="#F6F6F6"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="211dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/hotline_numbers_for_addictions"
                android:textColor="#FF0057"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Quit_Smoking" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="136dp"
                android:layout_height="21dp"
                android:layout_marginTop="4dp"
                android:text="@string/suicide_preventions"
                android:textColor="@color/design_default_color_background"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />


            <TextView
                android:id="@+id/textView28"
                android:layout_width="115dp"
                android:layout_height="19dp"
                android:layout_marginTop="8dp"
                android:autoLink="phone"
                android:text="1-800-273-8255"
                android:textColor="#E91E63"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/textView29"
                android:layout_width="176dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/alcohol_and_drug_abuses"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28"/>


            <TextView
                android:id="@+id/textView30"
                android:layout_width="114dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:autoLink="phone"
                android:text="1-800-729-6686"
                android:textColor="#E91E63"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/textView31"
                android:layout_width="212dp"
                android:layout_height="18dp"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/alcohol_addiction_hotline"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="phone"
                android:text="@string/_1_844_289_0879"
                android:textColor="#E91E63"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/quit_smoking_help_hotline"
                android:textColor="#F6F6F6"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="phone"
                android:text="@string/_1_800_784_8669"
                android:textColor="#E91E63"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>